fixed popup on mobile devices

--- a/mpa/donate.css
+++ b/mpa/donate.css
@@ -1,18 +1,18 @@
-.b-popup{
+.b-popup {
     display: none;
-    margin-left: -0.68%;
-    width:100%;
-    min-height:100%;
+    width: 100%;
+    min-height: 100%;
     background-color: rgba(0,0,0,0.5);
     overflow:hidden;
-    position:fixed;
-    top:0px;
+    position: fixed;
+    top: 0;
     z-index: 100;
 }
-.b-popup .b-popup-content{
-    margin:40px auto 0px auto;
-    width: 40%;
-    padding:10px;
+.b-popup .b-popup-content {
+    margin: 100px 20% 0 20%;
+    position: absolute;
+    width: 60%;
+    padding: 10px;
     background-color: white;
     -webkit-box-shadow: 0px 0px 10px #000;
             box-shadow: 0px 0px 10px #000;
@@ -263,6 +263,14 @@ input::-webkit-inner-spin-button {
 }
 .donate-form-answer {
   padding-bottom: 50px;
+}
+.b-popup .b-popup-content {
+    margin: 3px;
+    width: auto;
+    padding: 5px;
+    overflow: scroll;
+    min-height: auto;
+    max-height: 90%;
 }
 }
 @media (max-width: 500px) {
